[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rlua = "0.19.5"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
serde = "1.0.164"
serde_json = "1.0.97"
rlua_derive = { path = "../rlua_derive" }